[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edgefedsim"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A simulator for federated learning in edge-cloud environments."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "simpy==4.0.1",
    "networkx==2.8.8",
    "numpy==1.23.5",
    "python-louvain==0.16",
    "tabulate==0.9.0",
    "pyyaml"  # Add pyyaml, it is used in utils.py
]

[project.urls]
Homepage = "https://github.com/ahmadpanah/EdgeFedSim"
Issues = "https://github.com/ahmadpanah/EdgeFedSim/issues"
