[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edgefedsim"
version = "0.1.0"
authors = [
  { name="Hossein Ahmadpanah", email="h.ahmadpanah@iau.ac.ir" },
]
description = "A simulator for federated learning in edge-cloud environments."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" } # Assumes you have a LICENSE file (e.g., with MIT license text)
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "simpy==4.0.1",
    "networkx==2.8.8",
    "numpy==1.23.5",
    "python-louvain==0.16",
    "tabulate==0.9.0",
    "pyyaml"
]

[project.urls]
Homepage = "https://github.com/ahmadpanah/EdgeFedSim"
Issues = "https://github.com/ahmadpanah/EdgeFedSim/issues"

# --- Add the section below ---
[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
edgefedsim = ["*.yaml"]
